shelters, login with magic email and password